# offline-LightningATM-esp32

./: .gitignore  AGENTS.md  FIRMWARE.md  README.md  firmware.md  platformio.ini  platformio.nix  user_guide.odt
3d-print-model/: CCatch v3.stl  README.md  fiat-hell-addon-big.3mf  fiat-hell-addonn-small.3mf  transport_screen_cover.3mf
3d-print-model/Magnet Case - with button preferred/: Front Magnet - with 12 mm hole.stl  info.md
assets/: offlineATM-837791.vsdx
include/: Display.hpp  GxEPD2_display_selection_new_style.h  LnurlPoS.hpp  blockclock.hpp  display_library.h  fossa_crypto.hpp  lightning_atm.h  lightning_atm.hpp  util.hpp
installer/: index.html
installer/assets/: config-common.js  serial.js  style.css
installer/firmware/v938757-Waveshare-2.13-v3/: manifest.json
installer/firmware/v938757-Waveshare-2.7-v1/: manifest.json
installer/firmware/v938776-Waveshare-1.54-v1/: manifest.json
installer/firmware/v938776-Waveshare-2.13-D/: manifest.json
installer/firmware/v938776-Waveshare-2.7-v2/: manifest.json
installer/firmware/v938844-Waveshare-1.54-v1-std_esp32/: manifest.json
installer/firmware/v938844-Waveshare-2.13-D-std_esp32/: manifest.json
installer/firmware/v938844-Waveshare-2.13-v3-std_esp32/: manifest.json
installer/firmware/v938844-Waveshare-2.7-v1-wv_esp32/: manifest.json
installer/firmware/v938844-Waveshare-2.7-v2-wv_esp32/: manifest.json
installer/firmware/v939148-Waveshare-1.54-v1-std_esp32/: manifest.json
installer/firmware/v939148-Waveshare-2.13-D-std_esp32/: manifest.json
installer/firmware/v939148-Waveshare-2.13-v3-std_esp32/: manifest.json
installer/firmware/v939148-Waveshare-2.7-v1-wv_esp32/: manifest.json
installer/firmware/v939148-Waveshare-2.7-v2-wv_esp32/: manifest.json
installer/firmware/v939229-Waveshare-1.54-v1-std_esp32/: manifest.json
installer/firmware/v939229-Waveshare-2.13-D-std_esp32/: manifest.json
installer/firmware/v939229-Waveshare-2.13-v3-std_esp32/: manifest.json
installer/firmware/v939229-Waveshare-2.7-v1-wv_esp32/: manifest.json
installer/firmware/v939229-Waveshare-2.7-v2-wv_esp32/: manifest.json
offline-lightning-atm-esp32/: Cargo.toml  build.rs  dev.md
offline-lightning-atm-esp32/.cargo/: config.toml
offline-lightning-atm-esp32/.github/workflows/: rust_ci.yml
offline-lightning-atm-esp32/src/: board.rs  coins.rs  config.rs  display.rs  lib.rs  lnurl.rs  main.rs  state.rs  util.rs  wifi.rs
src/: Display.cpp  LnurlPoS.cpp  blockclock.cpp  fossa_crypto.ino  main.cpp  util.cpp
telegram_notification_bot/: README.md  main.py
telegram_notification_bot/atmbot_rust/: .env.example  Cargo.toml  README.md
telegram_notification_bot/atmbot_rust/src/: main.rs
testing/: test.cpp
