[package]
name = "offline-lightning-atm-esp32"
version = "0.1.0"
authors = ["user <f@f321x.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]  # lib is only to run unittests on x86 (host)
name = "offline_lightning_atm"
path = "src/lib.rs"

[[bin]]
name = "offline-lightning-atm-esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["esp"]

esp = ["esp-idf-svc", "epd-waveshare", "esp-idf-hal"]
experimental = ["esp-idf-svc/experimental"]
esp-idf-svc = ["dep:esp-idf-svc"]

[dependencies]
log = "0.4"
aes = "0.8.4"
rand = "0.9.2"
md-5 = "0.10.6"
cbc = "0.1.2"
cipher = { version = "0.4.4", features = ["alloc", "block-padding"] }
qrcode = { version = "0.14.1", default-features = false }
base64 = "0.22.1"
bech32 = "0.11.0"

# ESP32-specific dependencies
esp-idf-svc = { version = "0.51", optional = true }
epd-waveshare = { version = "0.6.0", optional = true, default-features = false, features = ["epd2in13_v2", "graphics"] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
esp-idf-hal = { version = "0.45.2", optional = true }

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"