[package]
name = "atmbot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde_json = "1.0.120"

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
debug = false